<resources>
    <string name="app_name">JarvisDoeSangue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_title">Doe Sangue, Doe Vida</string>
    <string name="btn_login">Login Doador</string>
    <string name="btn_registration">Cadastro Doador</string>
    <string name="btn_center_registration">Cadastro Centro de Coleta</string>
    <string name="complete_name">Nome Completo</string>
    <string name="email">E-mail</string>
    <string name="id">CPF</string>
    <string name="birthdate">Data de Nascimento</string>
    <string name="marital_status">Estado Civil</string>
    <string name="weight">Peso</string>
    <string name="height">Altura</string>
    <string name="blood_type">Tipo Sanguíneo</string>
    <string name="password">Senha</string>
    <string name="btn_next">Próximo</string>
    <string name="telephone">Telefone</string>
    <string name="zip_code">CEP</string>
    <string name="street">Logradouro</string>
    <string name="number">Número</string>
    <string name="additional_data">Complemento (Opcional)</string>
    <string name="neighbourhood">Bairro</string>
    <string name="state">Estado</string>
    <string name="city">Cidade</string>
    <string name="register">Salvar</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_menu">Menu</string>
    <string name="confirmation_title">Revise seus dados</string>
    <string name="name_title">Nome:</string>
    <string name="email_title">Email:</string>
    <string name="birthday_title">Data de nascimento:</string>
    <string name="marital_title">Estado Civil:</string>
    <string name="height_title">Altura:</string>
    <string name="weight_title">Peso:</string>
    <string name="blood_title">Tipo sanguíneo:</string>
    <string name="cpf_title">CPF:</string>
    <string name="personal_data">Dados pessoais</string>
    <string name="address_title">Endereço</string>
    <string name="telephone_title">Telefone:</string>
    <string name="zip_code_title">CEP:</string>
    <string name="street_title">Logradouro:</string>
    <string name="number_title">Número:</string>
    <string name="additional_data_title">Complemento:</string>
    <string name="neighbourhood_title">Bairro:</string>
    <string name="city_title">Cidade:</string>
    <string name="state_title">Estado:</string>
    <string name="address_register">Endereço cadastrado!</string>
    <string name="personal_data_register">Dados pessoais cadastrados!</string>


</resources>