<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:fontFamily="@font/dk_longreach"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/doacao_de_sangue"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            android:layout_marginStart="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:paddingVertical="24dp"
            android:fontFamily="@font/coolvetica_rg"
            android:text="@string/btn_login"
            android:backgroundTint="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/button_second"
            app:layout_constraintEnd_toEndOf="@+id/button_second"
            app:layout_constraintStart_toStartOf="@+id/button_second"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:paddingVertical="24dp"
            android:fontFamily="@font/coolvetica_rg"
            android:text="@string/btn_registration"
            android:backgroundTint="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/button_third"
            app:layout_constraintEnd_toEndOf="@+id/button_third"
            app:layout_constraintStart_toStartOf="@+id/button_third"
            app:layout_constraintTop_toBottomOf="@+id/button_first" />

        <Button
            android:id="@+id/button_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:paddingVertical="24dp"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/coolvetica_rg"
            android:text="@string/btn_center_registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_second" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="button_third,button_second,button_first" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>