<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddressFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/dk_longreach"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/doacao_de_sangue"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            android:layout_marginStart="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/telephone"
                    android:fontFamily="@font/coolvetica_rg"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/telephone_field"
                        android:fontFamily="@font/coolvetica_rg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/telephone"
                        android:text="@={}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/zip_code"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:fontFamily="@font/coolvetica_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/telephone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/zip_code_field"
                        android:fontFamily="@font/coolvetica_rg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/zip_code"
                        android:text="@={}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/street"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/coolvetica_rg"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/zip_code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/street_field"
                        android:fontFamily="@font/coolvetica_rg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/street" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/coolvetica_rg"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/street">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/number_field"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/coolvetica_rg"
                        android:layout_height="match_parent"
                        android:hint="@string/number"
                        android:text="@={}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/additional_data"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/coolvetica_rg"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/additional_data_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/coolvetica_rg"
                        android:hint="@string/additional_data"
                        android:text="@={}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/neighbourhood"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/coolvetica_rg"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/additional_data">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/neighbourhood_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/coolvetica_rg"
                        android:hint="@string/neighbourhood"
                        android:text="@={}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/state"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/coolvetica_rg"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/city">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/state_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/state"
                        android:fontFamily="@font/coolvetica_rg"
                        android:text="@={}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/coolvetica_rg"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/neighbourhood">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/coolvetica_rg"
                        android:hint="@string/city"
                        android:text="@={}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/register"
                    android:fontFamily="@font/coolvetica_rg"
                    android:backgroundTint="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/state"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>