<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PersonalDataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/dk_longreach"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/doacao_de_sangue"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            android:layout_marginStart="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:paddingBottom="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/coolvetica_rg"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/complete_name"
                        android:fontFamily="@font/coolvetica_rg"
                        android:inputType="number"
                        android:text="@={model.zipCodeCommercialOb}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/coolvetica_rg"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:fontFamily="@font/coolvetica_rg"
                        android:inputType="number"
                        android:text="@={model.zipCodeCommercialOb}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cpf"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundColor="@color/white"
                    android:fontFamily="@font/coolvetica_rg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cpf_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/id"
                        android:inputType="number"
                        android:fontFamily="@font/coolvetica_rg"
                        android:text="@={model.zipCodeCommercialOb}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthdate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundColor="@color/white"
                    android:fontFamily="@font/coolvetica_rg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cpf">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthdate_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/birthdate"
                        android:fontFamily="@font/coolvetica_rg"
                        android:inputType="number"
                        android:text="@={model.zipCodeCommercialOb}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/marital_status"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundColor="@color/white"
                    android:fontFamily="@font/coolvetica_rg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/birthdate">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/marital_status_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/marital_status"
                        android:fontFamily="@font/coolvetica_rg"
                        android:inputType="number"
                        android:text="@={model.zipCodeCommercialOb}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/weight"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/coolvetica_rg"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/marital_status">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weight_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/weight"
                        android:fontFamily="@font/coolvetica_rg"
                        android:inputType="number"
                        android:text="@={model.zipCodeCommercialOb}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/height"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/coolvetica_rg"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/height_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/height"
                        android:fontFamily="@font/coolvetica_rg"
                        android:inputType="number"
                        android:text="@={model.zipCodeCommercialOb}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/blood_type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/coolvetica_rg"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/height">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/blood_type_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/blood_type"
                        android:fontFamily="@font/coolvetica_rg"
                        android:inputType="number"
                        android:text="@={model.zipCodeCommercialOb}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/coolvetica_rg"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:fontFamily="@font/coolvetica_rg"
                        android:inputType="number"
                        android:text="@={model.zipCodeCommercialOb}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/btn_next"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/coolvetica_rg"
                    android:paddingVertical="16dp"
                    android:backgroundTint="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/blood_type"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>